fix footer contrast

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -192,7 +192,7 @@ footer {
 
 footer {
   font-size: $font-size-sm;
-  color: $secondary;
+  color: $gray-700;
 }
 
 .card-title-with-count {
